src/test/deca/codegen/invalid/cast_class_on_null.deca
// Test cast class on null

class A {
    void display(){
        print("");
    }
}

{
    A a = new A();
    null none = (null) (a); 
}